--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -8,6 +8,7 @@
   <script src="jspsych-6.1.0/plugins/jspsych-2image-keyboard-response.js"></script>
   <script src="jspsych-6.1.0/plugins/jspsych-fullscreen.js"></script>
   <script src="jspsych-6.1.0/plugins/jspsych-instructions.js"></script>
+  <script src="jspsych-6.1.0/plugins/jspsych-survey-multi-choice.js"></script>
   <script src="extra_js/functions.js"></script>
   <link href="jspsych-6.1.0/css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
@@ -126,6 +127,57 @@ gorilla.ready(function(){
     ],
     show_clickable_nav: true,
     allow_keys: false
+  };
+
+  var comprehension_options = ["True", "False"]
+  var comprehension_check = {
+    type:'survey-multi-choice',
+    questions: [
+      {prompt: "I understand that I need to collect as many points as possible.", name: 'aim', options: comprehension_options, required: true},
+      {prompt: "One image will be randomly selected to give out points more frequently than the other at the start of the task.", name: 'random', options: comprehension_options, required: true},
+      {prompt: "The image that gives out points more frequently will change during the task.", name: 'most', options: comprehension_options, required: true},
+      {prompt: "I understand that I need to try and respond on every trial, and that if I dont respond on five consecutive trials or nine trials in total that I will not receive any payment for my participation.", name: 'respond', options: comprehension_options, required: true},
+      {prompt: "I understand that I need to keep the task window in fullscreen mode, and that if I exit fullscreen mode or tab away from this window that I will not receive any payment for my participation.", name: 'fullscreen', options: comprehension_options, required: true},
+      {prompt: "I fully understand the instructions for this task.", name: 'confirm', options: comprehension_options, required: true},
+    ]
+  };
+
+  var comprehension_instructions = {
+    type: "instructions",
+    pages: [
+      'Please review the task instructions carefully, one or more of your responses to the previous set of questions was incorrect.',
+      'Rememeber, in this task your aim is to collect as many points as possible. If you collect enough points then you will receive a bonus cash payment for your performance.',
+      'You can collect points in the following way:',
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be shown these two images, and you will need to <strong>select one of these images</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> These images will randomly appear on either the left or right hand side of the screen.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Use the <strong>left arrow key</strong> to select the image that appears on the left hand side, or the <strong>right arrow key</strong> to select the image on the right hand side.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> For each trial you will either <strong>gain or lose a point</strong> and whether you gain or lose a point is <strong>dependent on the image that you select</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> At the start of the task <strong>one image will be randomly selected to give out points more frequently than the other</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> To collect as many points as possible you will need to <strong>learn which image gives out points most frequently</strong> when chosen.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> During the task <strong>the image that gives out points most frequently will change</strong>, however you will not be told when this will occur.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Therefore, you will need to make sure you pay attention to the outcomes of your choices to make sure you are <strong>collecting as many points as possible</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be given <strong>two seconds</strong> to select either of the images using the arrow keys. If you do not select an image within two seconds then you will lose a point.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> If you do not select an image for five consecutive trials, or nine trials in total, then <strong>your participation in the study will be ended and you will not receive any payment</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then <strong>your participation in this study will also be ended and you will not received any payment</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> After making choices on practice trials you saw #####, however, in the main part of the task <strong>you will see points, and the total number of points you have gained or lost so far</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, choices made during practice trials will have <strong>no bearing on outcomes in the main task</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Remember, <strong>you could receive a bonus payment based on the number of points you collect</strong> during the main part of the task.`,
+      'If you are ready to start the main part of the task, please press <strong>Next</strong>. If you would like to review any instructions, please press <strong>Previous</strong>.'
+    ],
+    show_clickable_nav: true,
+    allow_keys: false
+  };
+
+  var comprehension_conditional = {
+    timeline: [comprehension_instructions, comprehension_check],
+    conditional_function: function(){
+        var data = jsPsych.data.get().last(1).values()[0].responses;
+        if(data.includes("False")) {
+            return true;
+        } else {
+            return false;
+        }
+    }
   };
 
 
@@ -357,6 +409,8 @@ gorilla.ready(function(){
   timeline.push(instructions);
   timeline.push(prac);
   timeline.push(main_instructions);
+  timeline.push(comprehension_check);
+  timeline.push(comprehension_conditional);
   timeline.push(main);
   timeline.push(performance_display);
   timeline.push({
