--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -77,7 +77,7 @@ gorilla.ready(function(){
     pages: [
       'Welcome to the experiement. Click next to begin.',
       'This experiment consists of two parts. In the first part you will complete a computerised task. In the second part you will complete a questionnaire.',
-      'In the first part of the experiment you will be completing a task where your aim is to collect as many points as possible. If you collect enough points then you will receive a bonus cash payment for your performance.',
+      'In the first part of the experiment you will be completing a task where your aim is to collect as many points as possible. If you collect enough points then you will receive bonus credits for your performance.',
       'You can collect points in the following way:',
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> On each trial you will be shown these two colourful fractal images, and you will need to <strong>select one of these colourful fractal images</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> These colourful fractal images will randomly appear on either the left or right hand side of the screen.`,
@@ -89,13 +89,13 @@ gorilla.ready(function(){
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> During the task <strong>the colourful fractal image that gives out points most frequently will change</strong>, however you will not be told when this will occur.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Therefore, you will need to make sure you pay attention to the outcomes of your choices to make sure you are <strong>collecting as many points as possible</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> On each trial you will be given <strong>two seconds</strong> to select either of the colourful fractal images using the arrow keys. If you do not select a colourful fractal image within two seconds then you will lose a point.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> If you do not select a colourful fractal image for five consecutive trials, or nine trials in total, then <strong>your participation in the study will be ended and you will not receive any payment</strong>.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then <strong>your participation in this study will also be ended and you will not received any payment</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> If you do not select a colourful fractal image for five consecutive trials, or nine trials in total, then <strong>your participation in the study will be ended and you will not receive any credits</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then <strong>your participation in this study will also be ended and you will not receive any credits</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> To get you used to the task, you will complete ten practice trials before starting the main task.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Choices on <strong>practice trials are not rewarded</strong> with points, and <strong>have no influence on the main task</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Instead of seeing points during practice trials you will see #####, which is being used as a placeholder.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> You will be told when you have completed the practice trials and when you are starting the main part of the task.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Remember, <strong>you could receive a bonus payment based on the number of points you collect</strong> during the main part of the task.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Remember, <strong>you could receive bonus credits based on the number of points you collect</strong> during the main part of the task.`,
       'If you are ready to start the practice trials, please press <strong>Next</strong>. If you would like to review the previous instructions, please press <strong>Previous</strong>.'
     ],
     show_clickable_nav: true,
@@ -111,7 +111,7 @@ gorilla.ready(function(){
       'Practice complete. Please press next.',
       'In the practice trials you were shown five hashtags (#####) following your selection of one of the colourful fractal images.',
       'Now, in the main part of the task you will <strong>gain or lose one point on each trial depending on which colourful fractal image</strong> you choose.',
-      'Rememeber, in this task your aim is to collect as many points as possible. If you collect enough points then you will receive a bonus cash payment for your performance.',
+      'Rememeber, in this task your aim is to collect as many points as possible. If you collect enough points then you will receive bonus credits for your performance.',
       'Also, choices made during practice trials will have <strong>no bearing on outcomes in the main task</strong>.',
       'If you are ready to continue, please press <strong>Next</strong>. If you would like to review the previous instructions, please press <strong>Previous</strong>.'
     ],
@@ -127,8 +127,8 @@ gorilla.ready(function(){
       {prompt: "One colourful fractal image will be randomly selected to give out points more frequently than the other at the start of the task.", name: 'random', options: comprehension_options, required: true},
       {prompt: "The colourful fractal image that gives out points more frequently will change during the task.", name: 'most', options: comprehension_options, required: true},
       {prompt: "The side of the screen that the colourful fractal image is presented on has no influence on whether I will gain or lose points", name: 'side', options: comprehension_options, required: true},
-      {prompt: "I understand that I need to try and respond on every trial, and that if I dont respond on five consecutive trials or nine trials in total that I will not receive any payment for my participation.", name: 'respond', options: comprehension_options, required: true},
-      {prompt: "I understand that I need to keep the task window in fullscreen mode, and that if I exit fullscreen mode or tab away from this window that I will not receive any payment for my participation.", name: 'fullscreen', options: comprehension_options, required: true},
+      {prompt: "I understand that I need to try and respond on every trial, and that if I dont respond on five consecutive trials or nine trials in total that I will not receive any credits for my participation.", name: 'respond', options: comprehension_options, required: true},
+      {prompt: "I understand that I need to keep the task window in fullscreen mode, and that if I exit fullscreen mode or tab away from this window that I will not receive any credits for my participation.", name: 'fullscreen', options: comprehension_options, required: true},
       {prompt: "I fully understand the instructions for this task.", name: 'confirm', options: comprehension_options, required: true},
     ],
     on_finish(data) {
@@ -140,7 +140,7 @@ gorilla.ready(function(){
     type: "instructions",
     pages: [
       'Please review the task instructions carefully, one or more of your responses to the previous set of questions was incorrect.',
-      'Rememeber, in this task your aim is to collect as many points as possible. If you collect enough points then you will receive a bonus cash payment for your performance.',
+      'Rememeber, in this task your aim is to collect as many points as possible. If you collect enough points then you will receive bonus credits for your performance.',
       'You can collect points in the following way:',
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> On each trial you will be shown these two colourful fractal images, and you will need to <strong>select one of these colourful fractal images</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> These colourful fractal images will randomly appear on either the left or right hand side of the screen.`,
@@ -152,11 +152,11 @@ gorilla.ready(function(){
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> During the task <strong>the colourful fractal image that gives out points most frequently will change</strong>, however you will not be told when this will occur.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Therefore, you will need to make sure you pay attention to the outcomes of your choices to make sure you are <strong>collecting as many points as possible</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> On each trial you will be given <strong>two seconds</strong> to select either of the colourful fractal images using the arrow keys. If you do not select a colourful fractal image within two seconds then you will lose a point.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> If you do not select a colourful fractal image for five consecutive trials, or nine trials in total, then <strong>your participation in the study will be ended and you will not receive any payment</strong>.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then <strong>your participation in this study will also be ended and you will not received any payment</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> If you do not select a colourful fractal image for five consecutive trials, or nine trials in total, then <strong>your participation in the study will be ended and you will not receive any credits</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then <strong>your participation in this study will also be ended and you will not receive any credits</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> After making choices on practice trials you saw #####, however, in the main part of the task <strong>you will see points, and the total number of points you have gained or lost so far</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Additionally, choices made during practice trials will have <strong>no bearing on outcomes in the main task</strong>.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Remember, <strong>you could receive a bonus payment based on the number of points you collect</strong> during the main part of the task.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img><br> Remember, <strong>you could receive bonus credits based on the number of points you collect</strong> during the main part of the task.`,
       'If you are ready to start the main part of the task, please press <strong>Next</strong>. If you would like to review the previous instructions, please press <strong>Previous</strong>.'
     ],
     show_clickable_nav: true,
@@ -351,7 +351,7 @@ gorilla.ready(function(){
    var rand_performance = Math.floor(Math.random() * (80 - 50 + 1)) + 50
    var performance_display = {
      type: 'html-keyboard-response',
-     stimulus: `You responded correctly on ${rand_performance}% of trials - You have earned the performance bonus!`,
+     stimulus: `You responded correctly on ${rand_performance}% of trials - You have earned the bonus credits!`,
       choices: [jsPsych.NO_KEYS],
       trial_duration: fb_dur      
     };
@@ -359,7 +359,7 @@ gorilla.ready(function(){
    var performance_display_continue = {
      type: 'html-keyboard-response',
      prompt: 'Press any key to continue.',
-     stimulus: `You responded correctly on ${rand_performance}% of trials - You have earned the performance bonus!`,
+     stimulus: `You responded correctly on ${rand_performance}% of trials - You have earned the bonus credits!`,
     };
 	
   //***** Define practice task loop *****//
